# ZIBGe-GLMM

./: .Rhistory  CITATION.cff  README.md  constantmodel.R  dZIBGe.cpp  dzibg.cpp  example.R  generate.R  generated.rda  mcmcsample.R  populationdata.rda  populationmodel.R  populationmodel_BZIP.R  rZIBG.rda  rZIBGe.rda
data/: README.md  populationdata.csv
module/: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  libtool
module/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
module/libltdl/: Makefile  Makefile.in  dlopen.la  dlopen.lo  libltdlc_la-lt__alloc.lo  libltdlc_la-lt_dlloader.lo  libltdlc_la-lt_error.lo  libltdlc_la-ltdl.lo  libltdlc_la-preopen.lo  libltdlc_la-slist.lo  lt__strl.lo
module/libltdl/.deps/: dlopen.Plo  libltdlc_la-preopen.Plo
module/libltdl/.libs/: libltdlc.la
module/src/: Makefile  Makefile.am  Makefile.in  ZIBGeometric.cc  ZIBGeometric.la  ZIBGeometric_la-ZIBGeometric.lo
module/src/.deps/: ZIBGeometric_la-ZIBGeometric.Plo
module/src/.libs/: ZIBGeometric.lai
module/src/distributions/: DBEEG.cc  DBEEG.h  DZIBG.cc  DZIBG.h  Makefile  Makefile.am  Makefile.in  ZIBGeometricdist_la-DBEEG.lo  ZIBGeometricdist_la-DZIBG.lo
module/src/distributions/.deps/: ZIBGeometricdist_la-DBEEG.Plo  ZIBGeometricdist_la-DZIBG.Plo
module/src/distributions/.libs/: ZIBGeometricdist.la
